style/desktop.css
body {
    padding: 50px;
    color: #505050;
    font-weight: 325;
}

h1 {
    font-family: 'Ubuntu';
    font-size: 28px;
    border-color: #202020;
    color: #202020;
    font-weight: 400;
}

h2 {
    font-family: 'Ubuntu';
    font-size: 24px;
    padding-left: 1%;
    border-bottom: 2px;
    border-color: #202020;
    color: #202020;
    font-weight: 400;
}

p {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 18px;
    padding-left: 1%;
    line-height: 1.75;
}

.renderbug {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 18px;
    padding-left: 1%;
    line-height: 1.75;
    color: #505050;
    font-weight: 325;
}

.bold {
    color: #202020;
    font-weight: 375;
}

a {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 18px;
    padding-left: 2%;
    line-height: 1.75;
    text-decoration: none;
    color: rgb(50, 0, 110);
    display: inline-block;
}

.cleanul {
    list-style-type: none;
    padding-left: 0%;
    margin-top: 2%;
    margin-bottom: 4%
}

li {
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 18px;
    padding: 1%;
    line-height: 1.75;
}

header {
    margin: auto;
    width: 60%;
}

div {
    margin: auto;
    width: 60%;
}

section {
    padding: 1%;
}

td {
    padding: 2%;
}

.publicationtitle {
    padding: 0;
    margin: 8px;
    line-height: 1;
    font-weight: 350;
}

.cmucoursetitle {
    padding: 0;
    margin: 8px;
    line-height: 1;
    font-weight: 350;
    color: rgb(196, 18, 48);
    display: inline-block;
}

.cmucoursetitle:hover {
    color: rgb(195, 86, 104);
}

.publicationtitle:hover {
    color: rgb(130, 100, 160);
}

.publicationauthors {
    padding: 0;
    margin: 8px;
    font-size: 16px;
    color: #505050;
    line-height: 1;
}

.publicationform {
    padding: 0;
    margin: 8px;
    font-size: 16px;
    color: #505050;
    line-height: 1;
}

.tooltip {
    margin: 0;
    width: 100%;
    position: relative;
}

.tooltip .tooltiptext {
    display: none;
    width: 150%;
    background-color: rgb(255, 255, 255);
    color: #202020;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;
    font-family: 'Noto Sans JP', sans-serif;
    font-size: 16px;
    
    /* Position the tooltip */
    position: absolute;
    top:45%;
    left:100%;
}

.tooltip:hover .tooltiptext {
    display: block;
}

.imagetooltip {
    max-width: 25%;
    color: rgb(50, 0, 110);
    font-weight: 400;
}

.imagetooltip .tooltipimage {
    display: none;
    max-width: 100%; /* Ensure the image doesn't exceed the tooltip width */
    height: auto; /* Maintain aspect ratio */
    width: auto; /* Maintain aspect ratio */
    position: absolute;
    background-color: white;
    border: 1px solid #ccc;
    padding: 5px;
    z-index: 10;
    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
    transform: translateY(-110%);
}

.imagetooltip:hover .tooltipimage {
    display: block;
}

.imagetooltip:hover {
    color: rgb(130, 100, 160);
}

